# creature-server

./: .dockerignore  .gitignore  .gitlab-ci-mongo-skip.yml  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile-chainguard  Dockerfile-debug  Dockerfile.package  LICENSE  README.md  SESSION_NOTES.md  animation_scheduler_plan.txt  build.sh  build_externals.sh  build_oatpp.sh  compile_protos.sh  compile_swift_protos.sh  docker-build-amd64.sh  download_lip_sync_data.sh  linux_build.sh  local_build.sh  make_package.sh  pi4_build.sh  start_creature_server.sh  start_pi_server.sh
.github/workflows/: amd64.yml  arm64.yml  debian-package.yml  docker-package.yml  main.yml  tests.yml
cmake/: Package.cmake
docs/: CREATURE_SCHEDULING.md  README.md  TESTING.md  ad-hoc-speech.md  async-voice-endpoints-plan.md  audit-2026-05-23.md  chunked-dialog-preview-plan.md  cooperative-scheduler.md  database-observability.md  dialog-metadata-dto-plan.md  dialog-provenance-plan.md  mp3-rendition-plan.md  multichar-dialog-client.md  shareable-sounds-plan.md  speech-track-builder-plan.md  storage-facade-expansion-plan.md  storage-facade-plan.md  storyboards-server-api.md  storyboards-server-plan.md  test-interrupt.sh
docs/architecture/: job-system.md
lib/CreatureVoicesLib/: CMakeLists.txt
lib/CreatureVoicesLib/src/: CreatureVoices.cpp  CreatureVoices.h  CurlBase.cpp  CurlBase.h  CurlHandle.cpp  CurlHandle.h  VoiceResult.h
lib/CreatureVoicesLib/src/methods/: CreatureVoices.cpp  generateCreatureSpeech.cpp  getSubscriptionStatus.cpp  listAllAvailableVoices.cpp
lib/CreatureVoicesLib/src/model/: CreatureSpeechRequest.cpp  CreatureSpeechRequest.h  CreatureSpeechResponse.cpp  CreatureSpeechResponse.h  HttpMethod.cpp  HttpMethod.h  Subscription.cpp  Subscription.h  Voice.cpp  Voice.h
lib/e131_service/: CMakeLists.txt
lib/e131_service/src/: E131Server.cpp  E131Server.h  Universe.cpp  Universe.h
messaging/: hellorld.proto  server.proto
plan/: dmx-fixture.md
scripts/: smoke-test-sound-endpoints.sh
src/: go.mod  go.sum
src/client/: client.go  main.cpp  server-client.h
src/exception/: exception.h
src/grpc/: hellorld.pb.go  hellorld_grpc.pb.go  server.pb.go  server_grpc.pb.go
src/log-monitor/: main.cpp
src/messaging/: server.grpc.pb.cc  server.grpc.pb.h  server.pb.cc  server.pb.h
src/model/: Animation.cpp  Animation.h  AnimationMetadata.cpp  AnimationMetadata.h  CacheInvalidation.cpp  CacheInvalidation.h  Creature.cpp  Creature.h  DialogScript.cpp  DialogScript.h  DmxFixture.cpp  DmxFixture.h  FrameData.cpp  FrameData.h  Input.cpp  Input.h  LogItem.cpp  LogItem.h  LogLevel.h  Notice.cpp  Notice.h  Playlist.cpp  Playlist.h  PlaylistItem.cpp  PlaylistItem.h  PlaylistStatus.cpp  PlaylistStatus.h  SortBy.h  Sound.cpp  Sound.h  Storyboard.cpp  Storyboard.h  StreamFrame.cpp  StreamFrame.h  Track.cpp  Track.h  VirtualStatusLights.cpp  VirtualStatusLights.h  WebsocketMessage.cpp  WebsocketMessage.h
src/mongo-test/: main.cpp
src/server/: GrpcServerManager.cpp  GrpcServerManager.h  Version.h.in  config.h  creature-server.cpp  creature-server.h  database.cpp  database.h  dmx.cpp  dmx.h  helpers.h  log-stream.cpp  main.cpp  movement.cpp  namespace-stuffs.h  server.go
src/server/animation/: CooperativeAnimationScheduler.cpp  CooperativeAnimationScheduler.h  LegacyAnimationScheduler.cpp  LegacyAnimationScheduler.h  PlaybackSession.cpp  PlaybackSession.h  SessionManager.cpp  SessionManager.h  StreamingPlaybackSession.cpp  StreamingPlaybackSession.h  animation.h  create.cpp  database.cpp  delete.cpp  get.cpp  helpers.cpp  list.cpp  load.cpp  play.cpp  player.cpp  player.h  update.cpp  upsert.cpp
src/server/audio/: AudioTransport.h  LocalSdlAudioTransport.cpp  LocalSdlAudioTransport.h  MonoWavDownmixer.cpp  MonoWavDownmixer.h  Mp3Writer.cpp  Mp3Writer.h  OggOpusWriter.cpp  OggOpusWriter.h  RtpAudioTransport.cpp  RtpAudioTransport.h  SoundPathResolver.cpp  SoundPathResolver.h  TravelMonoAudioTransport.cpp  TravelMonoAudioTransport.h
src/server/config/: CommandLine.cpp  CommandLine.h  Configuration.cpp  Configuration.h
src/server/creature/: UniverseResolver.cpp  UniverseResolver.h  create.cpp  get.cpp  getall.cpp  helpers.cpp  list.cpp  search.cpp  stream-frames.cpp  update.cpp  upsert.cpp
src/server/dmx/: dmx.cpp  dmx.h
src/server/eventloop/: event.cpp  event.h  eventloop.cpp  eventloop.h
src/server/fixture/: FixtureBindingDispatcher.cpp  FixtureBindingDispatcher.h  FixturePatternRunner.cpp  FixturePatternRunner.h  FixturePatternTickEvent.cpp  FixturePatternTickEvent.h  get.cpp  getall.cpp  helpers.cpp  upsert.cpp
src/server/gpio/: gpio.cpp  gpio.h
src/server/jobs/: JobManager.cpp  JobManager.h  JobState.h  JobWorker.cpp  JobWorker.h
src/server/logging/: CreatureLogSink.h  creature_log_sink.h
src/server/metrics/: StatusLights.cpp  StatusLights.h  counters.cpp  counters.h  (+2 more)
src/util/: AudioCache.cpp  AudioCache.h  ChildProcess.cpp  ChildProcess.h  JsonParser.cpp  JsonParser.h  MessageQueue.h  ObservabilityManager.cpp  ObservabilityManager.h  Result.cpp  Result.h  StoppableThread.h  cache.h  environment.cpp  environment.h  helpers.cpp  helpers.h  loggingUtils.cpp  loggingUtils.h  threadName.cpp  threadName.h  uuidUtils.cpp  uuidUtils.h  websocketUtils.cpp  websocketUtils.h
swift/messaging/: server.grpc.swift  server.pb.swift
tests/: elevenlabs_alignment_check.py  elevenlabs_full_test.py  elevenlabs_rest_stream_test.py  elevenlabs_ws_test.cpp  elevenlabs_ws_test.py
tests/fixture/: FixtureBindingDispatcher_test.cpp  FixturePatternRunner_setLive_test.cpp  FixturePatternRunner_test.cpp
tests/model/: AnimationMetadata_test.cpp  Animation_test.cpp  Creature_test.cpp  DmxFixture_test.cpp  FrameData_test.cpp  LogItem_test.cpp  Track_dual_id_test.cpp
tests/runtime/: Activity_test.cpp
tests/server/: FakeDatabase.cpp  FakeIdleScheduling.cpp  FakeObservabilityManager.cpp  FakeSpans.cpp  FakeWebsocketUtils.cpp  TestGlobals.cpp  TestGlobals.h
tests/support/: FakeEventLoop.cpp  FakeEventLoop.h  FakeEventLoop_test.cpp
tests/util/: SetAttributeOverload_test.cpp
(+248 files in other folders)
